# we-wish-the-perfect-weather

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: .gitignore  config_sample.json
log/: logging.ini  msg.html
src/: main.py
src/we_wish_the_perfect_weather/: __init__.py  db_controller_base.py  fetcher_base.py  manager.py  model.py  open_meteo_fetcher.py  pollen_count_fetcher.py  util.py  weather_db_controller.py  weather_fetcher.py
tests/cache/: test_notes_with_reactions.json
